# SAKK

./: .gitignore  CMakeLists.txt  NHF3.vcxproj  NHF3.vcxproj.filters  README.md  board.c  board.h  list.c  main.c  pawn.c  pawn.h  textures.c  textures.h
SDL2_gfx-1.0.1/: SDL2_gfx.vcxproj
SDL2_gfx-1.0.1/test/: TestGfx.vcxproj  TestImageFilter.vcxproj  TestRotozoom.vcxproj
