cmake_minimum_required(VERSION 3.17)
project(SAKK C)

set(CMAKE_C_STANDARD 99)

add_executable(SAKK main.c)


#====================================================================

#PKG_SEARCH_MODULE(SAKK REQUIRED sdl2)
#PKG_SEARCH_MODULE(SAKK REQUIRED SDL2_gfx)
#PKG_SEARCH_MODULE(SAKK REQUIRED SDL2_ttf)
#PKG_SEARCH_MODULE(SAKK REQUIRED SDL2_image)



INCLUDE_DIRECTORIES(SDL2-2.0.12/x86_64-w64-mingw32/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} SDL2-2.0.12/x86_64-w64-mingw32/lib/libSDL2.a )




#FIND_LIBRARY(SDL2 NAMES SDL2 libSDL2.a PATHS ${PROJECT_SOURCE_DIR}/SDL2-2.0.12/x86_64-w64-mingw32/lib/ NO_DEFAULT_PATH)

#INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2GFX_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2GFX_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2IMAGE_LIBRARIES})

